kpi/templates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kpi
  namespace: { { .Values.namespace } }
spec:
  parentRefs:
    - name: { { .Values.traefik.gateway.name } }
      namespace: { { .Values.traefik.gateway.namespace } }
      sectionName: { { .Values.traefik.gateway.sectionName } }
  hostnames:
    - { { .Values.traefik.hostname } }
  rules:
    - backendRefs:
        - name: { { .Values.traefik.backend.service } }
          namespace: { { .Values.namespace } }
          port: 3001
